Clean up search results component and scss

--- a/frontend/src/styles/search_results.scss
+++ b/frontend/src/styles/search_results.scss
@@ -1,34 +1,27 @@
 @import "colors";
 
 .results-background {
-    /* Top image is German movement bg, bottom is Casio GShock bg */
-    /* background-image: url("https://drive.google.com/uc?exportview&id=160pGDaZBgTxwIV-d-CuJ1wPUPke3DU4e"); */
-    /* background-image: url("https://drive.google.com/uc?exportview&id=1tZuHPPeNoQojSfjfUhXJFr8BLiWxKHPP"); */
+    display: flex;
+    flex-direction: column;
     background-image: url("/img/background/casio-gshock.jpg");
-    min-width: 100%;
-    min-height: 100vh;
     background-size: contain;
     top: 0;
     left: 0;
-    display: flex;
-    flex-direction: column;
+    min-width: 100%;
+    min-height: 100vh;
 }
 
 .search-result-show {
-    /* background-color: $color-4; */
-    margin: 2em auto;
-    /* border: 2px solid $color-5; */
-    filter: alpha(opacity=90);
-    max-width: 90%;
-    min-width: 75%;
-    min-height: 80%;
-    /* border-radius: 6px; */
-    /* overflow: auto; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     align-content: center;
+    filter: alpha(opacity=90);
+    max-width: 90%;
+    min-width: 75%;
+    min-height: 80%;
+    margin: 2em auto;
 }
 
 .search-result-show h1 {
@@ -37,87 +30,56 @@
 
 .search-result-nav-container {
     display: flex;
-    /* flex-direction: column; */
     justify-content: center;
-    /* align-items: flex-end; */
     flex-wrap: wrap;
-    /* border-bottom: $color-5 2px solid; */
-    /* padding: 0em 22em; */
-    width: 75%
+    width: 75%;
 }
 
 .search-result-save-container {
-    margin: 0em 1em;
-    /* max-width: 66%; */
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     flex-grow: 1;
+    flex-wrap: wrap;
+    margin: 0em 1em;
 }
 
 .search-result-save-input {
     flex-grow: 1;
-    /* background: $color-1; */
-    /* font-size: 1em; */
-    margin: 0em .25em 0em 0em;
-    /* margin: .75em; */
-
-    /* padding: 4px; */
-    /* padding: .25em 2em; */
-
-    /* border-radius: .25em; */
-    /* border: 2px solid $color-5; */
-
     background-color: $color-5;
     color: $color-1;
+    max-width: 75%;
     padding: .25em 1em;
-    /* margin: .25em; */
-    border-color: $color-5;
-    border-width: 1px;
-    border-style: solid;
+    border: 1px solid $color-5;
     border-radius: .25em;
+    margin: 0em .25em 0em 0em;
     font-size: 1em;
     transition-duration: 0.3s;
-    max-width: 75%;
 }
 
 .search-result-save-input:hover {
-    color: $color-2;
     background-color: $color-4;
+    color: $color-2;
     border-color: $color-2;
-
-    /* outline: none; */
-    /* outline-color: $color-2; */
 }
 
 .search-result-save-input:focus {
-    outline: none;
-    /* outline-color: #color-3;
-    outline-style: solid;
-    outline-width: 3px; */
-    
-    /* border-color: $color-2; */
-    
-    /* box-shadow: 0 0 0 .15em #color-3; */
-    /* border: 2px #color-3 solid; */
-
     background-color: $color-4;
     color: $color-2;
     border-color: $color-2;
+    outline: none;
 }
 
 .search-result-save-button {
-    margin: .1em 0em;
-
     background-color: $color-5;
-    cursor: pointer;
+    color: $color-1;
     padding: 4px 10px;
     border: 1px solid $color-5;
     border-radius: 5px;
+    margin: .1em 0em;
     font-size: 1em;
-    color: $color-1;
     transition-duration: 0.3s;
+    cursor: pointer;
 }
 
 .search-result-save-button:hover {
@@ -131,227 +93,165 @@
 }
 
 .search-result-query-tags {
-    padding: 0em;
-    /* border-bottom: $color-5 2px solid; */
     width: 66%;
+    padding: 0em;
 }
 
 .search-result-query-tags-list {
-  padding: .5em;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: .5em;
 }
 
-/* TODO check layout and flow */
 .search-result-query-tags-sort {    
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    /* padding: 0em 6em; */
-    /* border-bottom: $color-5 2px solid; */
+    align-items: center;
     width: 90%;
 }
 
 .search-result-query-tags-list-sort {
-  padding: .5em .5em .5em;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 75%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 75%;
+    padding: .5em .5em .5em;
 }
 
 .search-result-query-tags-list-sort-button {
-    margin: 1.5em .75em 0em;
-    /* float: left; */
-    /* display: inline; */
-    cursor: pointer;
-    background-color: $color-5;
-    color: $color-1;
-    padding: .25em;
-    border-color: $color-5;
-    border-width: 1px;
-    border-style: solid;
-    border-radius: .25em;
-    /* font-family: Arial, Helvetica, sans-serif; */
-    font-size: 1em;
     display: flex;
-    align-content: center;
     justify-content: center;
     align-items:center;
-    transition-duration: .3s;
-    /* max-width: 66%; */
+    align-content: center;
+    background-color: $color-5;
+    color: $color-1;
     width: 90%;
+    padding: .25em;
+    border: 1px solid $color-5;
+    border-radius: .25em;
+    margin: 1.5em .75em 0em;
+    font-size: 1em;
+    transition-duration: .3s;
+    cursor: pointer;
+
 }
 
 .search-result-query-tags-list-sort-button:hover {
-    color: $color-2;
     background-color: $color-4;
+    color: $color-2;
     border-color: $color-2;
 }
 
 .search-result-query-tags-list-sort-button:hover div {
-    color: $color-2;
     background-color: $color-4;
+    color: $color-2;
 }
 
 .search-result-query-tags-list-item {
-    /* float: left; */
-    /* display: inline; */
-    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    align-content: center;
     background-color: $color-5;
     color: $color-1;
     padding: .25em 1em;
-    margin: .25em;
-    border-color: $color-5;
-    border-width: 1px;
-    border-style: solid;
+    border: 1px solid $color-5;
     border-radius: .25em;
-    /* font-family: Arial, Helvetica, sans-serif; */
+    margin: .25em;
     font-size: 1em;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items:center;
     transition-duration: .3s;
+    cursor: pointer;
 }
 
 .search-result-query-tags-list-item:hover {
-    color: $color-2;
     background-color: $color-4;
+    color: $color-2;
     border-color: $color-2;
 }
 
 .search-result-query-tags-list-item:hover div {
-  color: $color-2;
-  background-color: $color-4;
+    background-color: $color-4;
+    color: $color-2;
 }
 
-/* .search-result-query-tags-list-item-text {
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items:center;
-} */
-
 .search-result-query-tags-list-item-delete {
-  width: 1em;
-  margin: 0px;
-  padding: 0px 0px 0em 1em;
-  /* background-color: $color-4; */
-  border: 0px;
-  border-radius: 0px;
-  color: $color-1;
-  display: flex;
-  flex-direction: column;
-  /* justify-content: center; */
-  /* align-items: center; */
+    display: flex;
+    flex-direction: column;
+    color: $color-1;
+    width: 1em;
+    padding: 0px 0px 0em 1em;
+    border: 0px;
+    border-radius: 0px;
+    margin: 0px;
 }
 
 .search-result-query-tags-list-item-sort {
-  width: 1em;
-  height: 1em;
-  margin: 0px;
-  padding: 0px 0px 0em 1em;
-  /* background-color: $color-4; */
-  border: 0px;
-  border-radius: 0px;
-  color: $color-1;
-  display: flex;
-  flex-direction: column;
-  /* justify-content: center; */
-  /* align-items: center; */
-}
-
-.search-result-query-tags-list-item-delete-icon {
-  /* color: white; */
+    display: flex;
+    flex-direction: column;
+    color: $color-1;
+    width: 1em;
+    height: 1em;
+    padding: 0px 0px 0em 1em;
+    border: 0px;
+    border-radius: 0px;
+    margin: 0px;
 }
 
 .search-result-query-tags-list-item-delete-icon:hover {
-  color: $color-1;
+    color: $color-1;
 }
 
 .top-three-row {
     text-align: center;
-    margin: 3em 0;
-    height: 80%
+    margin: 3em 0px;
+    height: 80%;
 }
 
 .top-three-row ul {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin: auto;
     text-align: center;
     max-width: 81%;
-    /* columns: 3; */
-    /* display: grid; */
-    /* grid-template-columns: 1fr 1fr 1fr; */
+    margin: auto;
 }
 
 .top-three-row li {
-    /* flex-basis: 27%; */
-    /* display: inline-block; */
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
     align-items: center;
-    /* background-color: $color-1; */
+    background-color: $color-5;
+    color: $color-1;
     top: 5em;
+    max-width: 18em;
     text-align: center;
     border: .25em solid $color-1;
     border-radius: 5px;
     margin: .5em;
     transition-duration: 0.3s;
-    /* max-width:24%; */
-    background-color: $color-5;
-    max-width: 18em;
-    color: $color-1;
 }
 
 .top-three-row li:hover {
+    background-color: $color-4;
+    color: $color-2;
     border: .25em solid $color-2;
     cursor: pointer;
-    color: $color-2;
-    background-color: $color-4;
-}
-
-.top-three-row li:hover img {
-    /* border-bottom: .2em solid $color-2; */
-}
-
-.top-three-row img {
-    /* border-bottom: .15em solid $color-5; */
-    /* border-radius: 5px; */
 }
 
 .watch-photo {
+    object-fit: cover;
     width: 18em;
     height: 27em;
-    object-fit: cover;
 }
 
 .watch-list-photo-container {
-    /* flex-grow: 10; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* overflow: hidden */
-    /* height: 40vh; */
-    /* min-width: 18vh; */
-    /* max-width: 18vh; */
-    /* min-height: 100%; */
-    /* min-height: 27vh; */
-    /* max-height: 27vh; */
-
-    /* width: 100%; */
-    /* max-width: 18vw; */
-    /* height: auto; */
-    /* background-size: cover; */
     background-color: $color-1;
-    /* width: 33%; */
     border-bottom: .2em solid $color-5;
     margin-bottom: .25em;
  }
@@ -366,61 +266,58 @@
 }
 
 .modal-background {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.7);
-  z-index: 10;
+    background: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 10;
 }
 
 
 .alert {
-  padding: 1em 0em; 
-  background-color: $color-2;
-  z-index: 999;
-  opacity: .90;
-  display: none;
-  align-items: center;
-  justify-content: space-evenly;
-  position: fixed;
-  top: 0em;
-  left: 0em;
-  width: 100%;
-  height: 3vh;
-  font-size: 2em;
-  font-weight: bold;
-  color: $color-5;
+    display: none;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: $color-2;
+    color: $color-5;
+    position: fixed;
+    top: 0em;
+    left: 0em;
+    width: 100%;
+    height: 3vh;
+    padding: 1em 0em;
+    font-size: 2em;
+    font-weight: bold;
+    opacity: .90;
+    z-index: 999;
 }
 
 .alert-text {
-  opacity: .99;
+    opacity: .99;
 }
 
 .alert-close {
-  font-size: 2em;
-  font-weight: bold;
-  cursor: pointer;
-  transition: 0.3s;
-  color: $color-5;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.3s;
+    cursor: pointer;
 }
 
 .alert-close:hover {
-  color: $color-1;
+    color: $color-1;
 }
 
 .alert-close-icon {
-  color: $color-5;
-  width: 1em;
-  height: 1em;
+    color: $color-5;
+    width: 1.5em;
+    height: 1.5em;
 }
 
 .alert-close-icon:hover {
-  color: $color-1;
+    color: $color-1;
 }
 
 .hidden {
@@ -436,6 +333,7 @@
     .top-three-row li {
         max-width: 15em;
     }
+
     .watch-list-photo-detail  {
         font-size: .85em;
     }
@@ -450,9 +348,11 @@
         width: 12em;
         height: 18em;
     }
+
     .top-three-row li {
         max-width: 12em;
     }
+
     .watch-list-photo-detail  {
         font-size: .8em;
     }
