--- a/frontend/src/styles/profile.scss
+++ b/frontend/src/styles/profile.scss
@@ -1,170 +1,129 @@
 @import "colors";
 
 .profile-page-container {
-  background-color: #414348;
-  min-height:100vh;
-  /* width: 66%; */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-image: url("/img/background/casio-gshock.jpg");
-  /* background-image: url("https://drive.google.com/uc?exportview&id=1tZuHPPeNoQojSfjfUhXJFr8BLiWxKHPP"); */
-  /* background-image: url("https://drive.google.com/uc?exportview&id=160pGDaZBgTxwIV-d-CuJ1wPUPke3DU4e"); */
-  background-size: contain;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url("/img/background/casio-gshock.jpg");
+    background-color: #414348;
+    background-size: contain;
+    min-height:100vh;
 }
 
 .profile-page-intro-text {
-  padding: 1.5em 1em;
-  /* padding: 30px 50px; */
-  text-align: center;
-  font-size: 24px;
-  /* line-height: 20px; */
-  /* font-weight: 200; */
-  color: $color-1;
-  background: $color-5;
-  border-radius: 4px;
-  width: 45%;
-  margin-top: 2em;
+    background: $color-5;
+    color: $color-1;
+    width: 45%;
+    text-align: center;
+    padding: 1.5em 1em;
+    border-radius: 4px;
+    margin-top: 2em;
+    font-size: 24px;
 }
 
 .search-items-container {
-  padding: 30px 10px 10px;
-  width: 90%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    padding: 30px 10px 10px;
 }
 
 .search-items-header {
-  padding: 10px;
-  margin: 1em;
-  font-size: 21px;
-  /* padding-bottom: 12px; */
-  width: 33%;
-  text-align: center;
-  color: $color-1;
-  background-color: $color-5;
+    background-color: $color-5;
+    color: $color-1;
+    text-align: center;
+    width: 33%;
+    padding: 10px;
+    margin: 1em;
+    font-size: 21px;
 }
 
 .search-items-index {
-  /* max-width: 100%; */
-  max-width: 75%;
-  min-width: 66%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 66%;
+    max-width: 75%;
 }
 
 .search-item-parent {
-  margin: .25em;
-  padding: .25em;
-  /* background: lightgrey; */
-  border-radius: .3em;
-  min-height: 6.5vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  background-color: $color-5;
-  border: .15em $color-5 solid;
+    display: flex;
+    flex-direction: column;
+    background-color: $color-5;
+    width: 100%;
+    min-height: 6.5vh;
+    padding: .25em;
+    border: .15em $color-5 solid;
+    border-radius: .3em;
+    margin: .25em;
 }
 
 .search-item-parent:hover {
-  cursor: pointer;
-  margin: .25em;
-  padding: .25em;
-  /* background: lightgrey; */
-  border-radius: 4px;
-  min-height: 6.5vh;
-  /* width: 66%; */
-  display: flex;
-  flex-direction: column;
-  background-color: $color-4;
-  color: $color-2;
-  border: .15em $color-2 solid;
+    display: flex;
+    flex-direction: column;
+    background-color: $color-4;
+    color: $color-2;
+    min-height: 6.5vh;
+    padding: .25em;
+    border: .15em $color-2 solid;
+    border-radius: 4px;
+    margin: .25em;
+    cursor: pointer;
 }
 
 .search-item-parent:hover div {
-  background-color: $color-4;
-  color: $color-2;
+    background-color: $color-4;
+    color: $color-2;
 }
 
 .search-item-parent:hover li {
-  /* background-color: $color-5; */
-  /* color: $color-1; */
-  color: $color-2;
-  background-color: $color-5;
+    background-color: $color-5;
+    color: $color-2;
 }
 
 .search-item-header {
-  background-color: transparent;
-  /* border: none; */
-  color: $color-1;
-  padding: .5em .5em;
-  text-align: center;
-  /* text-decoration: none; */
-  /* display: inline-block; */
-  font-size: 1.3em;
-  /* margin: 5px; */
-  /* border-radius: 5em; */
-  /* width: 100%; */
-  /* height: 100%; */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    background-color: transparent;
+    color: $color-1;
+    padding: .5em .5em;
+    font-size: 1.3em;
 }
 
-/* TODO font */
+// TODO font
 .profile-search-label {
-  /* padding-left: .5em; */
 }
 
 .profile-search-delete {
-  width: 1.2em;
-  margin: 0px;
-  padding: 0px;
-  /* background-color: $color-4; */
-  border: 0px;
-  border-radius: 0px;
-  color: $color-1;
-  display: flex;
-  flex-direction: column;
-  /* justify-content: center; */
-  /* align-items: center; */
-}
-
-.profile-search-delete-icon {
-  /* color: white; */
+    display: flex;
+    flex-direction: column;
+    color: $color-1;
+    width: 1.2em;
+    padding: 0px;
+    border: 0px;
+    border-radius: 0px;
+    margin: 0px;
 }
 
 .profile-search-delete-icon:hover {
-  /* color: white; */
-  color: $color-1;
-  /* background-color: white; */
+    color: $color-1;
 }
 
 .search-item-details {
-  background-color: transparent;
-  padding: .5em;
-  /* margin: .25em; */
-  /* background-color: $color-4; */
-}
-
-.search-item-details-list {
-  /* display: inline-flex; */
+    background-color: transparent;
+    padding: .5em;
 }
 
 .search-item-details-list-item {
-  float: left;
-  /* display: inline; */
-  /* background-color: $color-1; */
-  background-color: $color-4;
-  color: $color-1;
-  padding: .25em .5em;
-  margin: .25em;
-  border-color: $color-4;
-  border-width: 1px;
-  border-style: solid;
-  border-radius: .25em;
-  /* font-family: Arial, Helvetica, sans-serif; */
-  font-size: 1em;
+    float: left;
+    background-color: $color-4;
+    color: $color-1;
+    padding: .25em .5em;
+    border: 1px solid $color-4;
+    border-radius: .25em;
+    margin: .25em;
+    font-size: 1em;
 }
