Update checkboxes to tags for search form component

--- a/frontend/src/styles/navbar.scss
+++ b/frontend/src/styles/navbar.scss
@@ -198,6 +198,10 @@
     .alert {
         font-size: 1.75em;
     }
+
+    .search-form-transparent {
+        min-width: 54%;
+    }
 }
 
 @media only screen and (max-width: 801px) {
