Update scss for main page component

--- a/frontend/src/styles/navbar.scss
+++ b/frontend/src/styles/navbar.scss
@@ -234,4 +234,12 @@
     .search-result-query-tags-list-sort-button {
         width: 75%;
     }
+
+    .intro {
+        padding: 0em;
+    }
+
+    .summary {
+        width: 100%;
+    }
 }
