--- a/frontend/src/styles/search_main_page.scss
+++ b/frontend/src/styles/search_main_page.scss
@@ -23,20 +23,20 @@ body{
     padding-bottom: 20px;
 }
 
-a {
-    color: ivory;
-    text-decoration: none;
-}
+// a {
+//     color: ivory;
+//     text-decoration: none;
+// }
 
-footer {
-    text-align: right;
-    padding: 0 10% 1em 10%;
-}
+// footer {
+//     text-align: right;
+//     padding: 0 10% 1em 10%;
+// }
 
-form .input {
-    padding: 0 1em 0 1em;
-    font-size: 1.2rem;
-}
+// form .input {
+//     padding: 0 1em 0 1em;
+//     font-size: 1.2rem;
+// }
 
 h1 {
     padding: 1em 0;
@@ -50,20 +50,20 @@ h2 {
     font-weight: 650;
 }
 
-input[type="radio"] {
-    width: 1.4em;
-    height: 1.4em;
-    margin: 0 8px 0 25px;
-}
+// input[type="radio"] {
+//     width: 1.4em;
+//     height: 1.4em;
+//     margin: 0 8px 0 25px;
+// }
 
-input[type="submit"] {
-    font-size: 1.2rem;
-}
+// input[type="submit"] {
+//     font-size: 1.2rem;
+// }
 
 .banner h1 {
     display: block;
     color: #0B3C5D;
-    text-align: right;
+    text-align: center;
     padding: 0.4em 0 0.6em;
     line-height: 0.8;
     letter-spacing: 0;
@@ -76,79 +76,35 @@ input[type="submit"] {
     display: none;
 }
 
-.input-select {
-    width: 50%;
-    max-width: 40%;
-    padding: 5px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-size: 1.0rem;
-}
+// .input-select {
+//     width: 50%;
+//     max-width: 40%;
+//     padding: 5px;
+//     margin-top: 10px;
+//     margin-bottom: 10px;
+//     font-size: 1.0rem;
+// }
 
 .intro {
-    padding: 0 10% 3em 30%;
-}
-
-.radio-inputs {
     display: flex;
-    justify-content: space-around;
-    padding: 1em;
-    font-size: 1.5rem;
+    flex-direction: column;
+    align-items: center;
+    // padding: 0 10% 3em 30%;
+    padding: 0 3em 3em;
 }
-
-.splash > h1 {
-    text-align: left;
-    font-size: 2.2rem;
-}
-
-// .splash-form {
-//     padding: 1em;
-// }
-
-// .splash-form-submit {
-// 	// display: inline-block;
-//     // background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
-// 	// color: #0B3C5D;
-// 	// padding: 4px 18px;
-// 	// border: 1px solid #dcdcdc;
-// 	// border-radius: 2px;
-//     // box-shadow: inset 0px 1px 0px 0px #ffffff;
-// 	// font-weight: bold;
-// 	// text-decoration: none;
-// 	// text-shadow: 0px 1px 0px gray;
-//     // cursor: pointer;
-    
-//     background-color: $color-5;
-//     color: $color-1;
-//     padding: 4px 10px;
-//     border: 1px solid $color-5;
-//     border-radius: 5px;
-//     margin: .1em 0em;
-//     font-size: 1em;
-//     transition-duration: 0.3s;
-//     cursor: pointer;
-// }
-
-// .splash-form-submit:hover {
-//     // background: linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
-//     // background-color: #dfdfdf;
-    
-//     background-color: $color-4;
-//     color: $color-2;
-//     border: 1px solid $color-2;
-// }
-
-// .splash-form-submit:active {
-//     // position: relative;
-// 	// top: 1px;
-// }
 
 .summary {
-    // min-width: 900px;
+    // display: flex;
+    width: 66%;
 }
 
+// .splash > h1 {
+//     text-align: left;
+//     font-size: 2.2rem;
+// }
+
 .summary p {
-    text-align: right;
+    text-align: center;
     text-shadow: 0px 1px 0px gray;
     line-height: 1.6;
     letter-spacing: 0.1em;
@@ -156,7 +112,6 @@ input[type="submit"] {
     font-weight: 300;
     text-transform: uppercase;
 }
-
 
 
 .splash-search-transparent {
