Update layout and scss for login form component

--- a/frontend/src/styles/navbar.scss
+++ b/frontend/src/styles/navbar.scss
@@ -258,4 +258,12 @@
     .summary p {
         font-size: 1.2rem;
     }
+
+    .modal-child {
+        max-width: 90%;
+    }
+
+    .session-form-main {
+        max-width: 90%;
+    }
 }
