--- a/frontend/src/styles/search_main_page.scss
+++ b/frontend/src/styles/search_main_page.scss
@@ -6,11 +6,12 @@ body{
     background-color: #414348;
     min-width: 100%;
     min-height: 100vh;
-    font: normal 300 haboro-serif, serif;
+    // font: normal 300 haboro-serif, serif;
 }
 
 #app {
     min-height: 100vh;
+    font-family: 'Roboto', sans-serif;
 }
 
 .splash-background {
@@ -169,7 +170,8 @@ h2 {
 .search-form-submit-button {
     background-color: $color-5;
     color: $color-1;
-    padding: .25em .5em;
+    width: 60%;
+    padding: .75em .75em;
     border: 1px solid $color-5;
     border-radius: .25em;
     margin: .25em;
