--- a/frontend/src/styles/search_results.scss
+++ b/frontend/src/styles/search_results.scss
@@ -176,6 +176,10 @@
     color: $color-2;
 }
 
+.search-result-query-tags-list-item-text {
+    text-align: center;
+}
+
 .search-result-query-tags-list-item-delete {
     display: flex;
     flex-direction: column;
