--- a/frontend/src/styles/navbar.scss
+++ b/frontend/src/styles/navbar.scss
@@ -40,6 +40,7 @@
     position: fixed;
     top: 0; 
     margin: .75em 0em 0em .75em;
+    z-index: 10000;
 }
 
 .dropdown-content {
@@ -248,7 +249,8 @@
     }
 
     .banner h1 {
-        font-size: 3.5rem;
+        padding: .75em 0 0.5em;
+        font-size: 2.5rem;
     }
 
     .summary {
@@ -260,10 +262,11 @@
     }
 
     .modal-child {
-        max-width: 90%;
+        max-width: 81%;
     }
 
     .session-form-main {
         max-width: 90%;
+        padding: 1em 0em;
     }
 }
