--- a/frontend/src/styles/search_main_page.scss
+++ b/frontend/src/styles/search_main_page.scss
@@ -80,6 +80,7 @@ h2 {
 
 .splash-search-transparent {
     background-color: transparent;
+
 }
 
 .splash-search-box {
@@ -94,6 +95,7 @@ h2 {
     background-color: $color-0;
     min-width: 45%;
     max-width: 75%;
+    margin: 4.5em 0em 0em 0em;
     border: .1em solid $color-5;
     border-radius: 6px;
     opacity: 0.95;
